--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "gecko": {
       "id": "toggleHTML@dillinger",
       "strict_min_version": "102.0",
-      "strict_max_version": "*"
+      "strict_max_version": "126.*"
     }
   },
   "manifest_version": 2,
