--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "toggleHTML@dillinger",
       "strict_min_version": "115.0",
-      "strict_max_version": "127.*"
+      "strict_max_version": "128.*"
     }
   },
   "manifest_version": 2,
